# switchboard-voice-changer-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO_LIST.md  tasks.py
src/: main.cpp
src/extension/: VoiceChangerExtension.cpp  VoiceChangerExtension.hpp  VoiceChangerNodeFactory.hpp
src/nodes/: PitchShiftNode.cpp  PitchShiftNode.hpp  RingModNode.cpp  RingModNode.hpp
src/presets/: VoicePresets.hpp
src/presets/json/: 01_deep_villain.json  02_chipmunk.json  03_robot.json  04_alien.json  05_monster.json  06_radio.json  07_demon.json  08_ghost.json  09_giant.json  10_cyborg.json
tests/: IntegrationTests.cpp  PitchShiftNodeTests.cpp  RingModNodeTests.cpp  TestHelpers.hpp
